# Physics3D

./: .gitignore  CMakeLists.txt  LICENSE.md  Physics3D.sln  README.md  fileStructure.md  setupBuild.sh  setupDependencies.sh  world.grammar
Physics3D/: CMakeLists.txt  Physics3D.vcxproj  colissionBuffer.h  inertia.h  layer.cpp  layer.h  part.cpp  part.h  physical.cpp  physical.h  relativeMotion.h  rigidBody.cpp  rigidBody.h  world.cpp  world.h  worldIteration.h  worldPhysics.cpp  worldPhysics.h
Physics3D/boundstree/: boundsTree.cpp  boundsTree.h  boundsTreeAVX.cpp  boundsTreeSSE.cpp
Physics3D/boundstree/filters/: outOfBoundsFilter.h  rayIntersectsBoundsFilter.h  visibilityFilter.cpp  visibilityFilter.h
Physics3D/constraints/: ballConstraint.cpp  ballConstraint.h  barConstraint.cpp  barConstraint.h  constraint.cpp  constraint.h  constraintGroup.cpp  constraintGroup.h  constraintImpl.h  hingeConstraint.cpp  hingeConstraint.h  softConstraint.h
Physics3D/datastructures/: alignedPtr.h  aligned_alloc.h  buffers.h  compactPtrDataPair.h  intrusivePointer.h  iteratorEnd.h  iterators.h  parallelArray.h  sharedArray.h  smartPointers.h  unmanagedArray.h  unorderedVector.h
Physics3D/externalforces/: directionalGravity.cpp  directionalGravity.h  externalForce.cpp  externalForce.h  gravityForce.h  magnetForce.cpp  magnetForce.h
Physics3D/geometry/: builtinShapeClasses.cpp  builtinShapeClasses.h  computationBuffer.cpp  computationBuffer.h  convexShapeBuilder.cpp  genericIntersection.cpp  genericIntersection.h  indexedShape.cpp  intersection.h  polyhedron.cpp  polyhedron.h  shape.cpp  shape.h  shapeBuilder.cpp  shapeBuilder.h  shapeClass.cpp  shapeClass.h  shapeCreation.cpp  shapeCreation.h  shapeLibrary.cpp  shapeLibrary.h  triangleMesh.cpp  triangleMesh.h  triangleMeshAVX.cpp  triangleMeshCommon.h  triangleMeshSSE.cpp  triangleMeshSSE4.cpp
Physics3D/hardconstraints/: constraintTemplates.h  fixedConstraint.cpp  fixedConstraint.h  hardConstraint.cpp  hardConstraint.h  hardPhysicalConnection.h  motorConstraint.cpp  motorConstraint.h  sinusoidalPistonConstraint.h
Physics3D/hardconstraints/controller/: constController.h  sineWaveController.h
Physics3D/math/: cframe.h  fix.h  globalCFrame.h  globalTransform.h  position.h  predefinedTaylorExpansions.h  ray.h  rotation.h  transform.h  utils.h
Physics3D/math/linalg/: largeMatrix.h  mat.h  trigonometry.cpp  vec.h
Physics3D/misc/: cpuid.cpp  cpuid.h  debug.cpp  debug.h  physicsProfiler.cpp  profiling.h  unreachable.h  validityHelper.cpp  validityHelper.h
Physics3D/misc/serialization/: dynamicSerialize.h  serialization.cpp  serialization.h  serializeBasicTypes.h
Physics3D/softlinks/: alignmentLink.cpp  alignmentLink.h  elasticLink.cpp  elasticLink.h  magneticLink.cpp  magneticLink.h  softLink.cpp  softLink.h  springLink.cpp  springLink.h
Physics3D/threading/: physicsThread.cpp  physicsThread.h  sharedLockGuard.h  synchonizedWorld.h  synchronizedWorld.cpp  synchronizedWorld.h  threadPool.h  upgradeableMutex.cpp  upgradeableMutex.h  upgradeable_shared_mutex.cpp  upgradeable_shared_mutex.h  worldTicker.cpp  worldTicker.h
application/: application.cpp  application.h  application.rc  application.vcxproj  buffers.h  builtinWorlds.cpp  builtinWorlds.h  colError.looseParts  component.natvis  core.h  debug.cpp  debug.h  debugData.natvis  eventHandler.cpp  eventHandler.h  export.cpp  export.h  extendedPart.cpp  extendedPart.h  imgui.ini  import.cpp  import.h  inputHandler.cpp  inputHandler.h  math.natvis  meshLibrary.cpp  meshLibrary.h  objectLibrary.cpp  objectLibrary.h  partFactory.cpp  partFactory.h  profiling.cpp  profiling.h  properties.cpp  properties.h  resource.h  resourceLoader.cpp  resourceManager.cpp  resourceManager.h  resources.cpp  (+15 more)
benchmarks/: basicWorld.cpp  benchmark.cpp  benchmark.h  benchmarkMain.cpp  benchmarks.h  benchmarks.vcxproj  boundsTreeBenchmark.cpp  complexObjectBenchmark.cpp  ecsBenchmark.cpp  getBoundsPerformance.cpp  manyCubesBenchmark.cpp  physicalBenchmarks.cpp  rotationBenchmark.cpp  threadResponseTime.cpp  worldBenchmark.cpp  worldBenchmark.h
engine/: circularBuffer.h  constants.h  constraintGroup.cpp  constraintGroup.h  core.h  debug.cpp  debug.h  engine.vcxproj  engineException.h  filters.h  iterators.h  meshRegistry.cpp  meshRegistry.h  parallelArray.h  part.cpp  part.h  partContainer.cpp  partContainer.h  physical.cpp  physical.h  physicalRENAME.cpp  physicsProfiler.cpp  physicsProfiler.h  profiling.h  sharedLockGuard.h  smallVector.h  synchonizedWorld.h  visualData.cpp  visualData.h  world.cpp  world.h  worldIterator.h  worldPhysics.cpp
examples/: CMakeLists.txt  examples.vcxproj  openglBasic.cpp
graphics/: bindable.cpp  bindable.h  core.h  extendedTriangleMesh.cpp  extendedTriangleMesh.h  font.cpp  font.h  glfwUtils.cpp  glfwUtils.h  graphics.rc  graphics.res  graphics.vcxproj  light.h  material.cpp  material.h  meshLibrary.cpp  meshLibrary.h  meshRegistry.cpp  meshRegistry.h  renderUtils.cpp  renderUtils.h  renderer.cpp  renderer.h  resource.h  resources.cpp  resources.h  texture.cpp  texture.h  visualData.h  visualShape.cpp  visualShape.h
install/: clean.bat  clean.sh  setup.bat  setup.sh  setupBuild.bat  setupBuild.sh  setupBuildUbuntu.sh  setupDependencies.bat  setupDependencies.sh  setupDependenciesUbuntu.sh  setupUbuntu.sh
physics/: alignmentLink.cpp  alignmentLink.h  catchable_assert.h  colissionBuffer.h  constraintGroup.cpp  constraintGroup.h  cpuid.cpp  cpuid.h  debug.cpp  debug.h  elasticLink.cpp  elasticLink.h  hardConstraint.h  inertia.cpp  inertia.h  integrityCheck.h  layer.cpp  layer.h  layerRef.cpp  layerRef.h  layerType.h  magneticLink.cpp  magneticLink.h  motion.h  parallelArray.h  part.cpp  part.h  physical.cpp  physical.h  physics.vcxproj  physicsProfiler.h  profiling.h  relativeMotion.h  rigidBody.cpp  rigidBody.h  sharedLockGuard.h  softLink.cpp  softLink.h  springLink.cpp  springLink.h  (+5 more)
res/: .properties  imgui.ini
tests/: boundsTree2Tests.cpp  compare.h  constraintTests.cpp  dataStructureTests.cpp  ecsTests.cpp  estimateMotion.cpp  estimateMotion.h  forAll.h  (+24 more)
(+826 files in other folders)
